Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.8
-
None
-
Patch Available
Description
Subject: Build failed in Jenkins: Thrift-Compiler-Windows #178
i586-mingw32msvc-g++ -DHAVE_CONFIG_H -I. -I../.. -I./src -DMINGW -Wall -g
-O2 -MT thrift-t_delphi_generator.o -MD -MP -MF
.deps/thrift-t_delphi_generator.Tpo -c -o thrift-t_delphi_generator.o
`test -f 'src/generate/t_delphi_generator.cc' || echo
'./'`src/generate/t_delphi_generator.cc
src/generate/t_delphi_generator.cc:780: error: integer constant is too
large for 'long' type