THRIFT-1406: Build error after applying THRIFT-1395 Client: delphi Patch: Jens Geyer

Fixes build failure due to t_delphi_generator.cc:780: error: integer constant is too 
large for 'long' type



git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1189006 13f79535-47bb-0310-9956-ffa450edef68